Fixed selection being lost on product content and product keywords when using a scrollbar

--- a/projects/manager/src/app/pages/niche-shack-editor/product-form/product-editor/product-keywords/product-keywords.component.scss
+++ b/projects/manager/src/app/pages/niche-shack-editor/product-form/product-editor/product-keywords/product-keywords.component.scss
@@ -38,6 +38,7 @@ table {
         padding-top: 1px;
         padding-bottom: 1px;
         white-space: nowrap;
+        outline: none;
 
         &:hover:not(.selected-keyword):not(.transparent-keyword):not(.edited-keyword):not(.selected-keyword-top):not(.selected-keyword-middle):not(.selected-keyword-bottom):not(.selected-keyword-whole) {
             background: $hover-fill-color;
